第二次提交

--- a/project02.html
+++ b/project02.html
@@ -9,14 +9,14 @@
 <div style="width:980px; margin:0 auto">
     <!--header begin-->
     <div style="height:56px;">
-        <img src="images/logo.png" alt="" align="left"/>       
-        <p align="right">旅游首页&nbsp;&nbsp;|&nbsp;&nbsp;登陆&nbsp;&nbsp;|&nbsp;&nbsp;注册</p>
+        <img src="images/logo.png" alt="" align="left"/>
+        <p align="right"><font color="red">旅游首页&nbsp;&nbsp;|&nbsp;&nbsp;登陆&nbsp;&nbsp;|&nbsp;&nbsp;注册</font></p>
     </div>
     <hr color="#CCC" />
     <!--header end-->
     <!--“伊露岛”介绍模块 begin-->
     <div style="height:470px;">
-        <img src="images/banner1.jpg" alt="" align="left" hspace="12" vspace="12"/> 
+        <img src="images/banner1.jpg" alt="" align="left" hspace="12" vspace="12"/>
         <div>
             <p align="center">
                 <strong>
@@ -114,12 +114,12 @@
    <div style="text-align:center;">
    		<p >
             <font color="#1d5983" size="2">
-            	一日游网友意见留言板&nbsp;&nbsp;&nbsp;<font color="#333">电话：000-1234567</font> &nbsp;&nbsp;&nbsp;欢迎批评指正	
+            	一日游网友意见留言板&nbsp;&nbsp;&nbsp;<font color="#333">电话：000-1234567</font> &nbsp;&nbsp;&nbsp;欢迎批评指正
             </font>
         </p>
         <p>
         	<font color="#1d5983" size="2">
-        		公司简介 | About YIRIYOU| 广告服务 | 联系我们 | 招聘信息 | 网站律师 | YIRIYOU English | 注册 | 产品答疑 
+        		公司简介 | About YIRIYOU| 广告服务 | 联系我们 | 招聘信息 | 网站律师 | YIRIYOU English | 注册 | 产品答疑
             </font>
         </p>
         <p>
@@ -133,7 +133,7 @@
             </font>
         </p>
    </div>
-   <!-- footer end-->   
+   <!-- footer end-->
 </div>
 </body>
 </html>
